[project]
name = "house-agent"
version = "0.1.0"
description = "House Agent that eliminate human house agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.128.0",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

authors = [
    {name = "Idongesit Inyang", email = "inyangidongesit22@gmail.com"}
]