[project]
name = "house-agent"
version = "0.1.0"
description = "House Agent that eliminate human house agent."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "celery>=5.6.0",
    "fastapi>=0.128.0",
    "psycopg[binary]>=3.3.2",
    "pgvector>=0.3.6",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.12.0",
]

authors = [
    {name = "Idongesit Inyang", email = "inyangidongesit22@gmail.com"}
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]
